--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="SMS Varanasi - Where Ancient Wisdom Meets Modern Management. Premium MBA/PGDM education in India's spiritual capital with world-class placements and transformative learning experiences.">
     <meta name="keywords" content="MBA Varanasi, PGDM, Management Education, SMS Varanasi, Business School India">
     <title>SMS Varanasi - Premium Management Education | Where Ancient Wisdom Meets Modern Management</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   <script type="module" async src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsmsvarana3204back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.10"></script>
   <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
   </head>
