--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <!-- Scroll Indicator -->
         <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 z-10 animate-bounce">
-            <img src="https://img.rocket.new/generatedImages/rocket_gen_img_1e81df4f8-1764767132261.png"
+            <img src="public/images/icons/arrow-down.png"
                 alt="Scroll down indicator" class="w-8 h-8">
         </div>
     </section>
@@ -460,8 +460,7 @@
                         <!-- <div class="swiper-slide"><img src="/public/images/recruiter/IIFL.png" alt=""></div> -->
                         <div class="swiper-slide"><img src="public/images/recruiter/ITC-removebg.png" alt=""></div>
                         <div class="swiper-slide"><img src="public/images/recruiter/Jindal-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/Kellogs-removebg-preview.png"
-                                alt=""></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/Kellogs-removebg.png" alt=""></div>
                         <div class="swiper-slide"><img src="public/images/recruiter/KotakKotak-removebg-preview.png"
                                 alt=""></div>
                         <!-- <div class="swiper-slide"><img src="/public/images/recruiter/KotakKotak.png" alt=""></div> -->
