add two pages about us and programs

--- a/index.html
+++ b/index.html
@@ -28,25 +28,7 @@
             <div class="flex items-center justify-between py-4">
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center space-x-3 group text-decoration-none">
-                    <div class="relative">
-                        <svg class="w-12 h-12 transition-transform duration-300 group-hover:scale-110"
-                            viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="48" height="48" rx="8" fill="#AD1F37" />
-                            <path
-                                d="M14 18C14 16.8954 14.8954 16 16 16H20C21.1046 16 22 16.8954 22 18V22C22 23.1046 21.1046 24 20 24H16C14.8954 24 14 23.1046 14 22V18Z"
-                                fill="white" />
-                            <path
-                                d="M26 18C26 16.8954 26.8954 16 28 16H32C33.1046 16 34 16.8954 34 18V22C34 23.1046 33.1046 24 32 24H28C26.8954 24 26 23.1046 26 22V18Z"
-                                fill="white" />
-                            <path
-                                d="M14 26C14 24.8954 14.8954 24 16 24H32C33.1046 24 34 24.8954 34 26V30C34 31.1046 33.1046 32 32 32H16C14.8954 32 14 31.1046 14 30V26Z"
-                                fill="#E8B547" />
-                        </svg>
-                    </div>
-                    <div class="flex flex-col">
-                        <span class="font-headline font-bold text-xl text-secondary leading-none">SMS Varanasi</span>
-                        <span class="font-body text-xs text-text-secondary">School of Management Sciences</span>
-                    </div>
+                    <img src="/public/images/icons/logoMain.png" alt="" style="width: 180px;">
                 </a>
 
                 <!-- Desktop Navigation -->
@@ -60,7 +42,7 @@
                     <a href="javascript:void(0)"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Campus
                         Life</a>
-                    <a href="javascript:void(0)"
+                    <a href="aboutus.html"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">About</a>
                     <a href="javascript:void(0)"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Contact</a>
@@ -96,7 +78,7 @@
                     <a href="javascript:void(0)"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Campus
                         Life</a>
-                    <a href="javascript:void(0)"
+                    <a href="aboutus.html"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">About</a>
                     <a href="javascript:void(0)"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Contact</a>
@@ -904,28 +886,14 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-secondary-900 text-white pt-16 pb-8">
+    <footer class="footer text-white pt-16 pb-8">
         <div class="container-custom">
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-12 mb-12">
                 <!-- About Column -->
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
-                        <svg class="w-12 h-12" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="48" height="48" rx="8" fill="#AD1F37" />
-                            <path
-                                d="M14 18C14 16.8954 14.8954 16 16 16H20C21.1046 16 22 16.8954 22 18V22C22 23.1046 21.1046 24 20 24H16C14.8954 24 14 23.1046 14 22V18Z"
-                                fill="white" />
-                            <path
-                                d="M26 18C26 16.8954 26.8954 16 28 16H32C33.1046 16 34 16.8954 34 18V22C34 23.1046 33.1046 24 32 24H28C26.8954 24 26 23.1046 26 22V18Z"
-                                fill="white" />
-                            <path
-                                d="M14 26C14 24.8954 14.8954 24 16 24H32C33.1046 24 34 24.8954 34 26V30C34 31.1046 33.1046 32 32 32H16C14.8954 32 14 31.1046 14 30V26Z"
-                                fill="#E8B547" />
-                        </svg>
-                        <div>
-                            <div class="font-headline font-bold text-xl">SMS Varanasi</div>
-                            <div class="text-sm text-gray-400">School of Management Sciences</div>
-                        </div>
+                        <img src="/public/images/icons/logoMain.png" alt=""
+                            style="width: 180px; background-color: white; padding: 4px;">
                     </div>
                     <p class="text-gray-400 mb-4">Where Ancient Wisdom Meets Modern Management. Transforming ambitious
                         students into visionary leaders.</p>
