--- a/aboutus.html
+++ b/aboutus.html
@@ -102,7 +102,7 @@
     <!-- Start Pages Banner Area -->
     <div class="pages-banner-area position-relative">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row gy-4">
                 <div class="col-lg-6">
                     <div class="pages-title">
                         <h2>About SMS</h2>
