--- a/programs.html
+++ b/programs.html
@@ -85,7 +85,7 @@
                     <a href="javascript:void(0)"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Campus
                         Life</a>
-                    <a href="javascript:void(0)"
+                    <a href="aboutus.html"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">About</a>
                     <a href="javascript:void(0)"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Contact</a>
@@ -102,7 +102,7 @@
     <!-- Start Pages Banner Area -->
     <div class="pages-banner-area position-relative">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row gy-4">
                 <div class="col-lg-6">
                     <div class="pages-title">
                         <h2>Programs</h2>
@@ -137,13 +137,13 @@
             <div class="programs-section-title">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="title">
+                        <div class="title text-center">
                             <h2>All Programs For Student</h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="programs-nav-tab">
-                            <ul class="nav nav-pills mb-0 justify-content-end" id="pills-tab" role="tablist">
+                            <ul class="nav nav-pills mb-0 justify-sm-content-end justify-content-center" id="pills-tab" role="tablist">
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
                                         data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
