--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <div class="flex items-center justify-between py-4">
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center space-x-3 group text-decoration-none">
-                    <img src="/public/images/icons/logoMain.png" alt="" style="width: 180px;">
+                    <img src="public/images/icons/logoMain.png" alt="" style="width: 180px;">
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex items-center space-x-8 navlink">
                     <a href="index.html"
                         class="font-cta font-semibold text-primary hover:text-primary-700 transition-colors duration-300">Home</a>
-                    <a href="javascript:void(0)"
+                    <a href="programs.html"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Programs</a>
                     <a href="javascript:void(0)"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Placements</a>
@@ -71,7 +71,7 @@
                 <div class="py-4 space-y-4 border-t border-border">
                     <a href="homepage.html"
                         class="block font-cta font-semibold text-primary hover:text-primary-700 transition-colors duration-300">Home</a>
-                    <a href="javascript:void(0)"
+                    <a href="programs.html"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Programs</a>
                     <a href="javascript:void(0)"
                         class="block font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Placements</a>
