--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="School of Management Sciences, Varanasi is a NAAC ‘A’ accredited Autonomous College in Varanasi Affiliated to AKTU and MGKVP ranked among top 50 B-schools offering professional courses like MBA, MCA, M.Com, BBA, B.Com(Hons), BCA and BA(Hons) Mass Comm. with a robust placement record, in renowned companies across India.">
     <title>SMS-VARANASI | SCHOOL OF MANAGEMENT SCIENCES</title>
-    <link rel="shortcut icon" href="/public/images/icons/logoMain.png" type="image/x-icon">
+    <link rel="shortcut icon" href="public/images/icons/logoMain.png" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -35,7 +35,7 @@
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center space-x-3 group text-decoration-none">
 
-                    <img src="/public/images/icons/logoMain.png" alt="" style="width: 180px;">
+                    <img src="public/images/icons/logoMain.png" alt="" style="width: 180px;">
                 </a>
 
                 <!-- Desktop Navigation -->
@@ -120,13 +120,13 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="pages-image">
-                        <img src="/public/images/pages-1.jpg" alt="pages-image">
+                        <img src="public/images/pages-1.jpg" alt="pages-image">
                     </div>
                 </div>
             </div>
         </div>
         <div class="shape-7">
-            <img src="/public/images/shape-7.png" alt="shape">
+            <img src="public/images/shape-7.png" alt="shape">
         </div>
     </div>
     <!-- End Pages Banner Area -->
@@ -159,7 +159,7 @@
                                 <div class="flex align-items-center justify-content-between">
                                     <div class="graduets-counter">
                                         <h2 class="d-flex align-items-center">
-                                            <img src="/public/images/icons/higher-education.png" alt="graduets-svg">
+                                            <img src="public/images/icons/higher-education.png" alt="graduets-svg">
                                             <span data-count="50">0</span>
                                             +
                                         </h2>
