--- a/programs.html
+++ b/programs.html
@@ -49,7 +49,7 @@
                     <a href="javascript:void(0)"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Campus
                         Life</a>
-                    <a href="javascript:void(0)"
+                    <a href="aboutus.html"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">About</a>
                     <a href="javascript:void(0)"
                         class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">Contact</a>
