--- a/aboutus.html
+++ b/aboutus.html
@@ -218,7 +218,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/graduation-hat-and-diploma.png" alt="">&nbsp;
+                            <img src="public/images/icons/graduation-hat-and-diploma.png" alt="">&nbsp;
                             <span data-count="11500">0</span>
                             +
                         </h2>
@@ -228,7 +228,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/job-offer.png" alt="">&nbsp;
+                            <img src="public/images/icons/job-offer.png" alt="">&nbsp;
                             <span data-count="500">0</span>
                             +
                         </h2>
@@ -238,7 +238,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/graduated.png" alt="">&nbsp;
+                            <img src="public/images/icons/graduated.png" alt="">&nbsp;
                             <span data-count="90">0</span>
                             % +
                         </h2>
@@ -249,7 +249,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/development.png" alt="">&nbsp;
+                            <img src="public/images/icons/development.png" alt="">&nbsp;
                             <span data-count="11500">0</span>
                             +
                         </h2>
@@ -259,7 +259,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/startup.png" alt="">&nbsp;
+                            <img src="public/images/icons/startup.png" alt="">&nbsp;
                             <span data-count="500">0</span>
                             +
                         </h2>
@@ -269,7 +269,7 @@
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="single-funfact-info text-center">
                         <h2 class="d-flex align-items-center justify-content-center">
-                            <img src="/public/images/icons/physical.png" alt="">&nbsp;
+                            <img src="public/images/icons/physical.png" alt="">&nbsp;
                             <span data-count="90">0</span>
                             % +
                         </h2>
@@ -346,7 +346,7 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="adma-about-card" data-aos="fade-right">
                                     <h3 class="d-flex align-items-center color-blue ">
-                                        <img src="/public/images/icons/mission.png" alt="title-shape"
+                                        <img src="public/images/icons/mission.png" alt="title-shape"
                                             style="height: 20px;"> &nbsp;
                                         Our Mission
                                     </h3>
@@ -362,7 +362,7 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="adma-about-card" data-aos="fade-left">
                                     <h3 class="d-flex align-items-center color-blue">
-                                        <img src="/public/images/icons/earth-globe.png" alt="title-shape"
+                                        <img src="public/images/icons/earth-globe.png" alt="title-shape"
                                             style="height: 20px;"> &nbsp;
                                         Our Vision
                                     </h3>
@@ -380,10 +380,10 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="adma-about-image text-end">
-                        <img src="/public/images/about-2.jpg" alt="about-image">
+                        <img src="public/images/about-2.jpg" alt="about-image">
 
                         <div class="shape-4">
-                            <img src="/public/images/shape-7.png" alt="shape-4">
+                            <img src="public/images/shape-7.png" alt="shape-4">
                         </div>
                     </div>
                 </div>
@@ -400,7 +400,7 @@
                 <!-- About Column -->
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
-                        <img src="/public/images/icons/logoMain.png" alt=""
+                        <img src="public/images/icons/logoMain.png" alt=""
                             style="width: 180px; background-color: white; padding: 4px;">
                     </div>
                     <p class="text-gray-400 mb-4">Where Ancient Wisdom Meets Modern Management. Transforming ambitious
