remove some section as per client

--- a/index.html
+++ b/index.html
@@ -107,12 +107,7 @@
         <div class="container-custom relative z-10 py-20">
             <div class="max-w-4xl">
                 <!-- Admission Badge -->
-                <div
-                    class="inline-flex items-center space-x-2 bg-accent/20 backdrop-blur-sm border border-accent/30 rounded-full px-6 py-3 mb-8 animate-fade-in">
-                    <img src="public/images/icons/graduation-hat-and-diploma.png" alt="Clock icon" class="w-7 h-7">
-                    <span class="font-cta font-semibold text-accent">Admissions Open 2025 | Limited Seats
-                        Available</span>
-                </div>
+
 
                 <h1
                     class="text-5xl md:text-6xl lg:text-7xl font-headline font-bold text-white mb-6 leading-tight animate-slide-up">
@@ -127,50 +122,9 @@
                     cutting-edge business practices.
                 </p>
 
-                <!-- Stats Counter -->
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-10 animate-slide-up"
-                    style="animation-delay: 200ms;">
-                    <div class="text-center">
-                        <div class="text-4xl md:text-5xl font-headline font-bold text-accent mb-2" data-count="98">0
-                        </div>
-                        <div class="text-sm text-gray-300 font-semibold">Placement Rate</div>
-                    </div>
-                    <div class="text-center">
-                        <div class="text-4xl md:text-5xl font-headline font-bold text-accent mb-2">₹<span
-                                data-count="12.5">0</span>L</div>
-                        <div class="text-sm text-gray-300 font-semibold">Avg. Package</div>
-                    </div>
-                    <div class="text-center">
-                        <div class="text-4xl md:text-5xl font-headline font-bold text-accent mb-2" data-count="250">0
-                        </div>
-                        <div class="text-sm text-gray-300 font-semibold">Top Recruiters</div>
-                    </div>
-                    <div class="text-center">
-                        <div class="text-4xl md:text-5xl font-headline font-bold text-accent mb-2" data-count="95">0
-                        </div>
-                        <div class="text-sm text-gray-300 font-semibold">Student Satisfaction</div>
-                    </div>
-                </div>
 
-                <!-- CTA Buttons -->
-                <div class="flex flex-col sm:flex-row gap-4 animate-slide-up" style="animation-delay: 300ms;">
 
-                    <button
-                        class="btn-3 btn-ghost text-white border-2 border-white hover:bg-white hover:text-secondary text-lg px-8 py-4"
-                        onclick="scrollToVirtualTour()">
-                        Apply Now for 2025
-                    </button>
-                    <button class="btn-3 text-lg px-8 py-4" onclick="openBrochureModal()"
-                        style="background-color: #e8b547; color: #fff; border: 1px solid white!important;">
-                        Download Brochure
-                    </button>
-                    <button
-                        class="btn-3 btn-ghost text-white border-2 border-white hover:bg-white hover:text-secondary text-lg px-8 py-4"
-                        onclick="scrollToVirtualTour()">
 
-                        Virtual Campus Tour
-                    </button>
-                </div>
             </div>
         </div>
 
@@ -182,36 +136,7 @@
         </div>
     </section>
 
-    <!-- Admission Countdown Timer -->
-    <section class="section text-white bg-mehrron topcta" id="admission">
-        <div class="container-custom">
-            <div class="flex flex-col md:flex-row items-center justify-between gap-8">
-                <div class="flex-1">
-                    <h2 class="text-3xl md:text-4xl font-headline font-bold mb-4">Admission Deadline Approaching</h2>
-                    <p class="text-lg text-primary-100">Secure your seat in India's most prestigious management program.
-                        Limited seats available!</p>
-                </div>
-                <div class="flex gap-4" id="countdownTimer">
-                    <div class="text-center bg-white/10 backdrop-blur-sm rounded-xl p-6 min-w-[100px]">
-                        <div class="text-4xl font-headline font-bold text-accent mb-2" id="days">45</div>
-                        <div class="text-sm font-semibold">Days</div>
-                    </div>
-                    <div class="text-center bg-white/10 backdrop-blur-sm rounded-xl p-6 min-w-[100px]">
-                        <div class="text-4xl font-headline font-bold text-accent mb-2" id="hours">12</div>
-                        <div class="text-sm font-semibold">Hours</div>
-                    </div>
-                    <div class="text-center bg-white/10 backdrop-blur-sm rounded-xl p-6 min-w-[100px]">
-                        <div class="text-4xl font-headline font-bold text-accent mb-2" id="minutes">34</div>
-                        <div class="text-sm font-semibold">Minutes</div>
-                    </div>
-                    <div class="text-center bg-white/10 backdrop-blur-sm rounded-xl p-6 min-w-[100px]">
-                        <div class="text-4xl font-headline font-bold text-accent mb-2" id="seconds">56</div>
-                        <div class="text-sm font-semibold">Seconds</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- Important points Section -->
     <section class="section section-alt" id="virtualTour">
         <div class="container-custom">
@@ -324,7 +249,8 @@
                                 welcome by virtue of being the first of its kind of self-financed institution in the
                                 region.</p>
                             <div class="application-btn d-flex justify-content-start">
-                                <a class="text-decoration-none default-btn" href="contact.html" style="background-color: maroon;">
+                                <a class="text-decoration-none default-btn" href="contact.html"
+                                    style="background-color: maroon;">
                                     Read More
                                     <i class="flaticon-right-arrow"></i>
                                 </a>
@@ -534,8 +460,8 @@
                     </div>
                     <div class="swiper-slide m-0">
                         <div class="text-center">
-                            <img src="public/images/awards/new naac.png" alt="Top 50 B-Schools ranking badge"
-                                class=" mx-auto mb-4 awardsCards" style="height: 92px;">
+                            <img src="public/images/awards/NAAC-A.png" alt="Top 50 B-Schools ranking badge"
+                                class=" mx-auto mb-4 awardsCards" style="height: 100px;">
 
                         </div>
                     </div>
@@ -605,23 +531,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Comprehensive management education with specializations in
                             Marketing, Finance, HR, and Operations</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">120 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹8.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">98%</div>
-                                <div class="text-xs text-text-secondary">Placement Rate</div>
-                            </div>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
                             </button>
@@ -647,23 +559,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Industry-focused diploma with international exposure and
                             corporate mentorship programs and Technologies</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">60 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹9.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">₹14L</div>
-                                <div class="text-xs text-text-secondary">Avg. Package</div>
-                            </div>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
 
@@ -690,23 +588,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Weekend program for working professionals seeking career
                             advancement and leadership roles</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">40 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹7.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">₹14L</div>
-                                <div class="text-xs text-text-secondary">Avg. Package</div>
-                            </div>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
                             </button>
@@ -733,23 +617,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Comprehensive management education with specializations in
                             Marketing, Finance, HR, and Operations</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">120 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹8.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">98%</div>
-                                <div class="text-xs text-text-secondary">Placement Rate</div>
-                            </div>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
                             </button>
@@ -775,23 +645,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Industry-focused diploma with international exposure and
                             corporate mentorship programs and Technologies</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">60 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹9.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">₹14L</div>
-                                <div class="text-xs text-text-secondary">Avg. Package</div>
-                            </div>
+
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
 
@@ -818,23 +674,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Weekend program for working professionals seeking career
                             advancement and leadership roles</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">40 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹7.5L Total</span>
-                            </div>
-                        </div>
+
                         <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">₹5L</div>
-                                <div class="text-xs text-text-secondary">Avg. Package</div>
-                            </div>
+
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
                             </button>
@@ -901,10 +743,7 @@
                             <p>we are committed to fostering a vibrant academic community and empowering our students to
                                 reach their full potential.</p>
                         </div>
-                        <a class="text-decoration-none arrow-btn" href="university-overview.html">
-                            University Overview
-                            <i class="flaticon-right-arrow"></i>
-                        </a>
+                        
                         <div class="choose-counter-info">
                             <ul class="list-unstyled ps-0 mb-0">
                                 <li class="d-inline-block">
@@ -1307,24 +1146,7 @@
 
             </div>
 
-            <!-- Parent Testimonial -->
-            <!-- <div class="mt-12 bg-gradient-to-r from-primary-50 to-accent-50 rounded-2xl p-8 md:p-12">
-                <div class="flex flex-col md:flex-row items-center gap-8">
-                    <img src="https://img.rocket.new/generatedImages/rocket_gen_img_12447cb8e-1764733703441.png"
-                        alt="Portrait of Mrs. Sunita Verma, parent of SMS student"
-                        class="w-32 h-32 rounded-full object-cover">
-                    <div class="flex-1 text-center md:text-left">
 
-                        <p class="text-xl text-secondary italic mb-4">"As a parent, I was initially concerned about
-                            sending my daughter to Varanasi. But SMS's world-class infrastructure, safety measures, and
-                            supportive faculty put all my worries to rest. The ROI has been exceptional!"</p>
-                        <div>
-                            <h4 class="font-headline font-bold text-secondary">Mrs. Sunita Verma</h4>
-                            <p class="text-text-secondary">Parent of MBA Student, Batch 2024</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </section>
 
