chnage one course section

--- a/index.html
+++ b/index.html
@@ -702,23 +702,9 @@
                     <div class="p-6">
                         <p class="text-text-secondary mb-4">Weekend program for working professionals seeking career
                             advancement and leadership roles</p>
-                        <div class="flex items-center justify-between mb-4">
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_171660033-1764668666857.png"
-                                    alt="Students icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">40 Seats</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_166454e54-1764791450211.png"
-                                    alt="Fee icon" class="w-5 h-5">
-                                <span class="text-sm text-text-secondary">₹7.5L Total</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center justify-between pt-4 border-t border-border">
-                            <div>
-                                <div class="text-2xl font-headline font-bold color-mehrron">90%</div>
-                                <div class="text-xs text-text-secondary">Placement Rate</div>
-                            </div>
+                        
+                        <div class="flex items-center justify-center pt-4 border-t border-border">
+                            
                             <button class="btn-2 d-flex" onclick="window.location.href='javascript:void(0)'">
                                 Explore Program
                             </button>
