--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="module" async
         src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsmsvarana3204back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.10"></script>
     <script type="module" defer src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
-    <link rel="shortcut icon" href="/public/images/icons/logoMain.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/icons/logoMain.png" type="image/x-icon">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -129,7 +129,7 @@
 
                 <!-- Mobile Menu Button -->
                 <button class="lg:hidden p-2 text-secondary hover:text-primary transition-colors" id="mobileMenuBtn">
-                    <img src="/public/images/icons/hamburger.png"
+                    <img src="/images/icons/hamburger.png"
                         alt="Menu icon" class="w-8 h-8">
                 </button>
             </div>
