--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </header>
 
     <!-- Hero Section with Video Background -->
-    <section class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20">
+    <section class="relative min-h-screen flex items-center justify-center overflow-hidden pt-0 pt-sm-20">
 
         <!-- new banner -->
         <section class="main-banner">
@@ -199,13 +199,11 @@
                                 <div class="banner-content text-sm-center  text-start ">
                                     <h1
                                         class="text-5xl md:text-6xl lg:text-7xl font-headline font-bold text-white mb-6 leading-tight animate-slide-up">
-                                        The Next Generation <br>
-                                        <span class="text-accent">Of Leadership Starts Here</span>
+                                       Make A <br>
+                                        <span class="text-accent">Difference Anywhere</span>
                                     </h1>
                                     <p class="text-xl md:text-2xl text-white mb-8 leading-relaxed animate-slide-up"
-                                        style="animation-delay: 100ms;">An investment in knowledge always pays the best
-                                        interest
-                                    </p>
+                                        style="animation-delay: 100ms;">The aim of the college, for the individual student, is to eliminate the need in his life for the college; the task is to help him become a self-educating man.- George Horace Lorimer</p>
 
 
                                     <div class="clearfix"></div>
